@@ -160,7 +160,7 @@ AT_DATA([monkey1s.conf],
 [[# monkey R.M.config
 xa_open/0
 xa_start/0
-xa_end/-10
+xa_end/-20
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0007 ; lixa_test_exec.sh noreset stop case0029 1 -7], [0], [ignore], [ignore])
 AT_CLEANUP
@@ -432,12 +432,12 @@ AT_DATA([monkey1s.conf],
 [[# monkey R.M.config
 xa_open/0
 xa_start/0
-xa_end/-10
+xa_end/-20
 ]])
 AT_DATA([monkey1d.conf],
 [[# monkey R.M.config
 xa_open/0
-xa_end/-10
+xa_end/-20
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset stop case0021 1 0 -7], [0], [ignore], [ignore])
 AT_CLEANUP
