@@ -58,7 +58,7 @@ AT_CHECK([export LIXA_PROFILE=CASE_PROF_0007 ; lixa_test_exec.sh noreset none ca
 # Invalid XA return code
 AT_DATA([monkey1s.conf],
 [[# monkey R.M.config
-xa_open/-10
+xa_open/-20
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0007 ; lixa_test_exec.sh noreset stop case0022 1 -7], [0], [ignore], [ignore])
 AT_CLEANUP
